--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
           haxelib install flixel-ui
           haxelib install flixel-addons
           haxelib install tjson
+          haxelib install hxCodec
           haxelib install hxjsonast
           haxelib install linc_luajit
           haxelib install hscript
